Bug 206312 Some rle4 bitmaps not recognised r=biesi sr=tor a=mkaply